--- a/index.html
+++ b/index.html
@@ -678,7 +678,8 @@
             <img loading="lazy" src="image/accordion.webp" alt="accordion">
             <p>Unter seinen Schülern befinden sich zahlreiche Preisträger verschiedener Wettbewerbe, darunter vierzehn 1. Bundespreisträger bei <a href="https://www.jugend-musiziert.org" target="_blank">"Jugend musiziert"</a>, 1. Preisträger des <a href="https://www.dhv-ev.de" target="_blank">Deutschen Akkordeon Musikpreis (DAM)</a> und Preisträger des Internationalen Akkordeonfestivals in Innsbruck.</p>
             <br>
-            <p>Neben seiner Konzert- und Lehrtätigkeit editiert Harald Oeler aktuell seine über viele Jahre entwickelte Akkordeonmethodik für Akkordeon C-Griff mit Melodiebässen, welche ab 2024 erhältlich sein wird. <a onclick="showPage('vortrag-readmore')" data-after="vortrag-readmore"> / mehr infos</a></p>
+            <p>Neben seiner Konzert- und Lehrtätigkeit editiert Harald Oeler aktuell seine über viele Jahre entwickelte Akkordeonmethodik für Akkordeon C-Griff mit Melodiebässen, welche ab 2024 erhältlich sein wird. <a ></p>
+            <br><a target="_blank" class="mehrinfo" onclick="showPage('vortrag-readmore')" data-after="vortrag-readmore">mehr infos</a>
         </div>
         <div class="col-right"> 
             <ul class="programm">
@@ -797,7 +798,7 @@
                     <p class="concert-info"><a target="_blank" href="https://joscho-stephan.de">Joscho Stephan</a> Trio feat. Harald Oeler</p>
                     <div class="calendar-container">
                         <i class="calendar-icon">&#128197;</i>
-                        <a class="calendar-link" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Kammerkonzert%20%7C%20Hot%20Club%20Swing&dates=20240126T193000/20240126T213000&location=Klangmanufaktur%2C%20Hof&details=Joscho%20Stephan%20Trio%20feat.%20Harald%20Oeler" target="_blank">GOOGLE CALENDAR</a>|
+                        <a class="calendar-link" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Kammerkonzert%20%7C%20Hot%20Club%20Swing&dates=20240126T193000/20240126T213000&location=Klangmanufaktur%2C%20Hof&details=Joscho%20Stephan%20Trio%20feat.%20Harald%20Oeler" target="_blank">GOOGLE CALENDAR</a> |
                         <a class="calendar-link" href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Kammerkonzert%20%7C%20Hot%20Club%20Swing%0D%0ADTSTART:20240126T193000%0D%0ADTEND:20240126T213000%0D%0ALOCATION:Klangmanufaktur%2C%20Hof%0D%0ADESCRIPTION:Joscho%20Stephan%20Trio%20feat.%20Harald%20Oeler%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR" download="event.ics">
                         iCAL</a>
                     </div>
@@ -881,7 +882,7 @@
                     <p class="uhr">Samstag, tba</p>
                     <p class="datum">14.09.2024</p>
                     <p class="concert"> "Warning to the rich"</p>
-                    <p class="location"><i class="fa-solid fa-location-dot"></i> Kreuzkirche, Hof</p>
+                    <p class="location"><i class="fa-solid fa-location-dot"></i> <a href="https://www.google.com/maps?client=safari&sca_esv=597840864&rls=en&sxsrf=ACQVn08PefMNrTffwf2jL2FqHYd2OpDzhg:1705079852321&uact=5&gs_lp=Egxnd3Mtd2l6LXNlcnAiD0tyZXV6a2lyY2hlIGhvZjIIEAAYgAQYywEyBhAAGBYYHjIGEAAYFhgeMgYQABgWGB4yBhAAGBYYHjIGEAAYFhgeMgYQABgWGB4yBhAAGBYYHjIGEAAYFhgeSKUNUNQCWJIMcAJ4AZABAJgBpAGgAf0EqgEDMC41uAEDyAEA-AEBwgIKEAAYRxjWBBiwA8ICCxAuGIAEGMcBGK8BwgIOEC4YgAQYxwEYrwEYjgXCAgUQABiABMICGhAuGIAEGMcBGK8BGJcFGNwEGN4EGOAE2AEB4gMEGAAgQYgGAZAGB7oGBggBEAEYFA&um=1&ie=UTF-8&fb=1&gl=de&sa=X&geocode=KZm9XbWyEaFHMbNLagn9ZM27&daddr=Jahnstraße+67,+95030+Hof" target="_blank">Kreuzkirche</a>, Hof</p>
                     <p class="concert-info"><a target="_blank" href="https://kammerchor-hof.de">Kammerchor Hof</a></p>
                     <div class="calendar-container">
                         <i class="calendar-icon">&#128197;</i>
@@ -898,7 +899,7 @@
                     <p class="uhr">Sonntag, tba</p>
                     <p class="datum">15.09.2024</p>
                     <p class="concert"> "Warning to the rich"</p>
-                    <p class="location"><i class="fa-solid fa-location-dot"></i> Auferstehungskirche, Bamberg </p>
+                    <p class="location"><i class="fa-solid fa-location-dot"></i> <a href="https://www.google.com/maps/dir//Auferstehungskirche/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47a11a6bfc6f2369:0xdb01cc124022d4a0?sa=X&ved=2ahUKEwiPm9rgrdiDAxVIR_EDHV8NCFAQ9Rd6BAhAEAA" target="_blank">Auferstehungskirche</a>, Bamberg </p>
                     <p class="concert-info"><a target="_blank" href="https://kammerchor-hof.de">Kammerchor Hof</a></p>                        
                     <div class="calendar-container">
                         <i class="calendar-icon">&#128197;</i>
