--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <meta property="og:title" content="HARALD OELER | accordionist">
   <meta property="og:description" content="Official website of the German accordionist Harald Oeler. Features all major projects, and media. Includes biographical information as well as past, current, and upcoming concerts.">
-  <meta property="og:image" content="http://www.haraldoeler.com/image/slide1.webp">
-  <meta property="og:url" content="http://www.haraldoeler.com/">
+  <meta property="og:image" content="https://www.haraldoeler.com/image/slide1.webp">
+  <meta property="og:url" content="https://www.haraldoeler.com/">
   <meta property="og:type" content="website">
-  <link rel="canonical" href="http://www.haraldoeler.com/">
+  <link rel="canonical" href="https://www.haraldoeler.com/">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="media.css">
   <link rel="stylesheet" href="toggle.css">
