--- a/kontakt.html
+++ b/kontakt.html
@@ -49,10 +49,10 @@
                         <ul class="horizontal">
                             <li class="noshown"><a href="about">about</a></li>
                             <li class="noshown"><a href="projekte">projekte</a></li>
-                            <li><a href="termine" >termine</a></li>
+                            <li><a href="termine">termine</a></li>
                             <li><a href="news">news</a></li>
                             <li><a href="unterricht">unterricht</a></li>
-                            <li><a href="discographie">discographie</a></li>                    
+                            <li><a href="discographie">discographie</a></li>
                             <li><a href="media">media</a></li>
                             <li><a href="kontakt">kontakt</a></li>
                         </ul>
@@ -64,7 +64,7 @@
         <h2 class="section-title">kontakt</h2>
         <div class="projectbox">
             <div class="col-left">
-                <img loading="lazy" src="/image/contact-profile.webp" alt="Your Image" class="circular-image">
+                <img loading="lazy" src="image/contact-profile.webp" alt="Your Image" class="circular-image">
             </div>
             <div class="col-right"> 
                 <h2 class="contact-name">HARALD OELER</h2>
