--- a/media.html
+++ b/media.html
@@ -42,27 +42,27 @@
             </label>
             <div class="nav-bar">
                 <div class="nav-list">
-                    <ul class="vertical">
-                        <li><a href="about">about</a></li>
-                        <li><a href="projekte">projekte</a></li>
-                    </ul>
-                    <ul class="horizontal">
-                        <li class="noshown"><a href="about">about</a></li>
-                        <li class="noshown"><a href="projekte">projekte</a></li>
-                        <li><a href="termine" >termine</a></li>
-                        <li><a href="news">news</a></li>
-                        <li><a href="unterricht">unterricht</a></li>
-                        <li><a href="discographie">discographie</a></li>                    
-                        <li><a href="media">media</a></li>
-                        <li><a href="kontakt">kontakt</a></li>
-                    </ul>
+                  <ul class="vertical">
+                    <li><a href="about">about</a></li>
+                    <li><a href="projekte">projekte</a></li>
+                </ul>
+                <ul class="horizontal">
+                    <li class="noshown"><a href="about">about</a></li>
+                    <li class="noshown"><a href="projekte">projekte</a></li>
+                    <li><a href="termine">termine</a></li>
+                    <li><a href="news">news</a></li>
+                    <li><a href="unterricht">unterricht</a></li>
+                    <li><a href="discographie">discographie</a></li>
+                    <li><a href="media">media</a></li>
+                    <li><a href="kontakt">kontakt</a></li>
+                </ul>
                 </div>
             </div>
         </div>
     </section>
     <section id="media" class="page">
         <h2 class="section-title">media</h2>
-        <p class="info"><i class="fa-solid fa-camera"></i> Kat Schulz & <a target="_blank" href="https://www.schwarzenbach-fotografie.de">Schwarzenbach Fotografie</a></p>   
+        <p class="info"><i class="fa-solid fa-camera"></i> Kat Schulze & <a target="_blank" href="https://www.schwarzenbach-fotografie.de">Schwarzenbach Fotografie</a></p>   
         <div class="row">
               <div class="column">
                 <img loading="lazy" src="image/slide1.webp" alt="slide" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
