--- a/projekte/duoklakk.html
+++ b/projekte/duoklakk.html
@@ -84,7 +84,7 @@
                         <p>3. Allegro</p>
                     </li>
                     <li>
-                        <span class="bold">Johann Svensson (1983)</span>
+                        <span class="bold">Johan Svensson (1983)</span>
                         <br>Double Dubbing (firefly song) (2020) for clarinet, accordeon & 16 piezo-buzzers
                     </li>
                 </ul>
