--- a/news.html
+++ b/news.html
@@ -63,11 +63,27 @@
         <h2 class="section-title">NEWS</h2>
         <div class="news">
             <div class="news-column">
+                <a href="news/joschostephan">
+                <img loading="lazy" src="image/joschostephan1.webp" alt="joschostephan" class="news-image"></a>
+                <a href="news/joschostephan"><h2>TOUR | JOSCHO STEPHAN TRIO</h2></a>
+                <p class="date">30.JANUAR.2024</p>
+                <p class="bold uppercase">Tour in Deutschland: Hof, Nagold und Gemmrigheim</p>
+                <a href="news/joschostephan" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
+                <a href="news/workshop">
+                <img loading="lazy" src="image/workshop.webp" alt="workshop" class="news-image"></a>
+                <a href="news/workshop"><h2>Musikalische Früherziehung</h2></a>
+                <p class="date">07.Januar.2024</p>
+                <p class="bold uppercase">Entdecke die Welt der Musik: Früherziehung mit Akkordeon</p>
+                <a href="news/workshop" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
                 <a href="news/podcast-readmore">
                 <img loading="lazy" src="image/news-pittispodcast.webp" alt="podcast" class="news-image"></a>
-                <a  href="news/podcast-readmore"><h2>PODCAST</h2></a>
+                <a  href="news/podcast-readmore"><h2>Pittis Podcast</h2></a>
                 <p class="date">07.Dezember.2023</p>
-                <p class="bold uppercase">Pittis Podcast. Akkordeonspecial - 40 Jahre und 200 Knöpfe. Mit Live-Musik! </p>
+                <p class="bold uppercase"> Akkordeonspecial - 40 Jahre und 200 Knöpfe. Mit Live-Musik! </p>
                 <p><a href="news/podcast-readmore" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a></p>
             </div>
             <div class="news-column">
@@ -85,6 +101,14 @@
                 <p class="date">22.November.2023</p>
                 <p class="bold uppercase">Richard Galliano | „Opale Concerto" für Akkordeon und Streichorchester</p>
                 <a href="news/kinderkonzert-readmore" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
+                <a href="news/fussissimo">
+                <img loading="lazy" src="image/project2.webp" alt="fussissimo" class="news-image"></a>
+                <a href="news/fussissimo"><h2>TOUR | FUSSISSIMO </h2></a>
+                <p class="date">10.OKTOBER.2023</p>
+                <p class="bold uppercase">Tour in Bayern: Ochsenfurt, Schweinfurt und Hof</p>
+                <a href="news/fussissimo" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
     </section> 
