--- a/projekte/duoklakk.html
+++ b/projekte/duoklakk.html
@@ -84,8 +84,13 @@
                         <p>3. Allegro</p>
                     </li>
                     <li>
-                        <span class="bold">Johan Svensson (1983)</span>
+                        <span class="bold"><a href="http://johansvensson.nu">Johan Svensson</a> (1983)</span>
                         <br>Double Dubbing (firefly song) (2020) for clarinet, accordeon & 16 piezo-buzzers
+                    </li>
+                    <li>
+                        <span class="bold"><a href="https://www.sinafanisani.com/home">Sina Fani Sani</a> (1990) </span>
+                        <br>A Strange Loop II: Drink your tea, the kids are dead!.., 
+                        <br>for accordion and clarinet in Bb
                     </li>
                 </ul>
             </div>
