--- a/projekte/duoklakk.html
+++ b/projekte/duoklakk.html
@@ -74,7 +74,7 @@
                 <br>Zukünftig sieht sich KlAkk! Als Klangmedium der elektroakustischen Neuen Musik mit dem Ziel der Vermehrung originaler Literatur für Klarinette und Akkordeon im Kontext elektronischer Klangmedien.</p> 
             </div>
             <div class="col-right">
-                <h2>programm </h2>
+                <h2>Programm</h2>
                 <ul class="programm">
                     <li>
                         <span class="bold">Joseph Haydn (1732 - 1809)</span> 
@@ -91,6 +91,13 @@
                         <span class="bold"><a href="https://www.sinafanisani.com/home">Sina Fani Sani</a> (1990) </span>
                         <br>A Strange Loop II: Drink your tea, the kids are dead!.., 
                         <br>for accordion and clarinet in Bb
+                    </li>
+                </ul>
+                <h2>Konzerten</h2>
+                <ul class="programm">
+                    <li>
+                        <p><span class="bold">11.10.2024 17:00 Uhr </span>Ludwigstraße 7, 95028 Hof</p>
+                        <p><span class="bold">18.10.2024 15:00 Uhr </span>Kirchpl. 1, 95444 Bayreuth</p>
                     </li>
                 </ul>
             </div>
