--- a/termine.html
+++ b/termine.html
@@ -80,7 +80,7 @@
                 </div>
                 <ul class="upcoming_list">
                     <li>
-                        <p class="uhr">Samstag, 20.00 Uhr</p>
+                        <p class="uhr">Samstag, 20:00 Uhr</p>
                         <p class="datum">11.05.2024</p>
                         <p class="concert">Benefizkonzert ZONTA Würzburg</p>
                         <p class="location"><i class="fa-solid fa-location-dot"></i> <a href="https://www.residenz-wuerzburg.de" target="_blank">Kaisersaal der Residenz</a>, Würzburg</p>
@@ -102,32 +102,27 @@
                     </li>
                     
                     <li>
-                        <p class="uhr">Samstag, tba</p>
-                        <p class="datum">08.06.2024</p>
-                        <p class="concert"> 39. Bayerische Theatertage |
-                            <br>Theater Hof | "Die weiße Rose"
-                        </p>
-                        <p class="location"><i class="fa-solid fa-location-dot"></i> <a target="_blank"
-                                href="https://www.google.com/maps/dir//stadt+theater+ingolstadt/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x479efe5375e4ad03:0xc399c3fd66940d00?sa=X&ved=2ahUKEwjcy5_rqdiDAxXabPEDHX_2AUMQ9Rd6BAhbEAA">Stadt
-                                Theater, </a>Ingolstadt</p>
-                        <p class="concert-info">Oper von Udo Zimmermann
-                            <br>Libretto von Ingo Zimmermann
+                        <p class="uhr">Sonntag, 17:00 Uhr</p>
+                        <p class="datum">16.06.2024</p>
+                        <p class="concert">projects4cellos & friends</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i><a href="https://www.google.com/maps/dir//Haus+Marteau/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47a16afeb728b9a9:0xdbd71b40cb7cb353?sa=X&ved=1t:3061&ictx=111"> Haus Marteau</a>, Lichtenberg</p>
+                        <p class="concert-info">Eine Veranstaltung des Tonkünstlerverbands Hochfranken e.V.</p>
                         <div class="calendar-container">
                             <i class="calendar-icon">&#128197;</i>
                             <a class="calendar-link"
-                                href="https://www.google.com/calendar/event?action=TEMPLATE&dates=20240608T000000Z/20240608T235959Z&text=39.%20Bayerische%20Theatertage%20|%20Theater%20Hof%20|%20Die%20weiße%20Rose&location=Stadt%20Theater,%20Ingolstadt&details=Oper%20von%20Udo%20Zimmermann,%20Libretto%20von%20Ingo%20Zimmermann"
+                                href="https://www.google.com/calendar/event?action=TEMPLATE&dates=20240616T150000Z/20240616T170000Z&text=projects4cellos%20%26%20friends&location=Internationale%20Musikbegegnungsst%C3%A4tte%20Haus%20Marteau&details=Eine%20Veranstaltung%20des%20Tonk%C3%BCnstlerverbands%20Hochfranken%20e.V."
                                 target="_blank">
                                 GOOGLE CALENDAR
                             </a> |
                             <a class="calendar-link"
-                                href="data:text/calendar;charset=utf-8,BEGIN:VCALENDAR%0AVERSION:2.0%0ABEGIN:VEVENT%0ADTSTART:20240608T000000Z%0ADTEND:20240608T235959Z%0ASUMMARY:39.%20Bayerische%20Theatertage%20-%20Theater%20Hof%20-%20Die%20weiße%20Rose%0ALOCATION:Stadt%20Theater,%20Ingolstadt%0ADESCRIPTION:Oper%20von%20Udo%20Zimmermann,%20Libretto%20von%20Ingo%20Zimmermann%0AEND:VEVENT%0AEND:VCALENDAR"
+                                href="data:text/calendar;charset=utf-8,BEGIN:VCALENDAR%0AVERSION:2.0%0ABEGIN:VEVENT%0ADTSTART:20240616T150000Z%0ADTEND:20240616T170000Z%0ASUMMARY:projects4cellos%20&%20friends%0ALOCATION:Internationale%20Musikbegegnungsst%C3%A4tte%20Haus%20Marteau%0ADESCRIPTION:Eine%20Veranstaltung%20des%20Tonk%C3%BCnstlerverbands%20Hochfranken%20e.V.%0AEND:VEVENT%0AEND:VCALENDAR"
                                 download="event.ics">
                                 iCAL
                             </a>
                         </div>
                         <a target="_blank" class="mehrinfo"
-                            href="https://theater.ingolstadt.de/aktuelles/aktuelles-1/aktuelles-detailansicht/bayerische-theatertage-2024">mehr
-                            infos | ticket</a>
+                            href="https://evangcellisten.de/neuigkeiten/627-projects4cellos-friends-kommen-nach-lichtenberg">mehr infos |
+                            ticket</a>
                     </li>
                     <li>
                         <p class="uhr">Samstag, 18:00 Uhr</p>
@@ -154,6 +149,27 @@
                         <a target="_blank" class="mehrinfo" href="https://kammerchor-hof.de">mehr infos | ticket</a>
                     </li>
                     <li>
+                        <p class="uhr">Samstag, 21:00 Uhr</p>
+                        <p class="datum">14.09.2024</p>
+                        <p class="concert">Die Hallersteiner Nachtkonzerte</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> <a href="https://www.google.com/maps?ll=50.184221,11.922303&z=16&t=m&hl=en-GB&gl=US&mapclient=embed&q=Hallerstein+95126+Schwarzenbach+an+der+Saale">Evangelischen Kirchengemeinde</a>, Hallerstein</p>
+                        <p class="concert-info">Kammermusikalischer Jazz-Abend</p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Die%20Hallersteiner%20Nachtkonzerte&details=Kammermusikalischer%20Jazz-Abend&location=Evangelischen%20Kirchengemeinde%20Hallerstein,%20Hallerstein&dates=20240914T190000Z/20240914T210000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Die%20Hallersteiner%20Nachtkonzerte%0D%0ADESCRIPTION:Kammermusikalischer%20Jazz-Abend%0D%0ADTSTART:20240914T190000Z%0D%0ADTEND:20240914T210000Z%0D%0ALOCATION:Evangelischen%20Kirchengemeinde%20Hallerstein,%20Hallerstein%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://www.hallerstein.de/vereine/heimat-und-kulturverein/nachtkonzerte/">mehr infos | ticket</a>
+                    </li>                    
+                    <li>
                         <p class="uhr">Sonntag, 17:00 Uhr</p>
                         <p class="datum">15.09.2024</p>
                         <p class="concert"> "Warning to the rich"</p>
@@ -178,6 +194,31 @@
                         <a target="_blank" class="mehrinfo" href="https://kammerchor-hof.de/konzerte/">mehr infos |
                             ticket</a>
                     </li>
+                    <li>
+                        <p class="uhr">Samstag</p>
+                        <p class="datum">28.09.2024</p>
+                        <p class="concert">"Werner Richter"- Wettbewerb</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Städtische+Musikschule+Chemnitz/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47a7465abf2118eb:0xaf01ce85677bdde2?sa=X&ved=1t:3061&ictx=111"
+                            target="_blank">Städtische Musikschule</a> , Chemnitz
+                        </p>
+                        <p class="concert-info">Jury des Sächsischen "Werner Richter"-Wettbewerbs für Akkordeon und Bandoneon</p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Werner%20Richter%20Wettbewerb&details=Jury%20des%20Sächsischen%20Werner%20Richter%20Wettbewerbs%20für%20Akkordeon%20und%20Bandoneon&location=Städtische%20Musikschule,%20Chemnitz&dates=20240928T090000Z/20240928T170000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Werner%20Richter%20Wettbewerb%0D%0ADESCRIPTION:Jury%20des%20Sächsischen%20Werner%20Richter%20Wettbewerbs%20für%20Akkordeon%20und%20Bandoneon%0D%0ADTSTART:20240928T090000Z%0D%0ADTEND:20240928T170000Z%0D%0ALOCATION:Städtische%20Musikschule,%20Chemnitz%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://www.musikschule-chemnitz.de/projekte-wettbewerbe/werner-richter-wettbewerb">mehr infos | anmeldung</a>
+                    </li>
+                    
                     <li>
                         <p class="uhr">Donnerstag, 19:30 Uhr</p>
                         <p class="datum">10.10.2024</p>
