--- a/projekte/solo.html
+++ b/projekte/solo.html
@@ -78,6 +78,13 @@
                 </div>
                 <div class="col-right">
                     <div class="solo-top">
+                        <h2>Solo</h2>
+                        <p>The Revolution of Tango Nuevo</p>
+                        <br>
+                    </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/tgLi-hNbMO0?si=c9OAZdYEkvL0CHNX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <br>
+                    <div class="solo-top">
                         <h2>Pictures at an Exhibition</h2>
                         <p>Modest Mussorgsky - Pictures at an Exhibition
                         <br>Sofia Gubaidulina - Et expecto</p>
