--- a/projekte/duoklakk.html
+++ b/projekte/duoklakk.html
@@ -84,19 +84,27 @@
                         <p>3. Allegro</p>
                     </li>
                     <li>
-                        <span class="bold"><a href="http://johansvensson.nu">Johan Svensson</a> (1983)</span>
-                        <br>Double Dubbing (firefly song) (2020) for clarinet, accordeon & 16 piezo-buzzers
-                    </li>
-                    <li>
                         <span class="bold"><a href="https://www.sinafanisani.com/home">Sina Fani Sani</a> (1990) </span>
                         <br>A Strange Loop II: Drink your tea, the kids are dead!.., 
                         <br>for accordion and clarinet in Bb
+                    </li>
+                    <li>
+                        <span class="bold"><a href="">Johann Sebastian Bach</a> (1685 - 1750)</span>
+                        <br>Sonate g-Moll für Viola da gamba und Cembalo, BWV 1029 (Arr.Harald Oeler)
+                        <p>1. Vivace</p>
+                        <p>2. Adagio</p>
+                        <p>3. Allegro</p>
+                    </li>
+                    <li>
+                        <span class="bold"><a href="http://johansvensson.nu">Johan Svensson</a> (1983)</span>
+                        <br>Double Dubbing (firefly song) (2020) for clarinet, accordeon & 16 piezo-buzzers
                     </li>
                 </ul>
                 <h2>Konzerten</h2>
                 <ul class="programm">
                     <li>
-                        <p><span class="bold">11.10.2024 17:00 Uhr </span>Ludwigstraße 7, 95028 Hof</p>
+                        <p><span class="bold">22.09.2024 19:00 Uhr </span>Kurstraße 5, 83435 Bad Reichenhall</p>
+                        <p><span class="bold">11.10.2024 19:00 Uhr </span>Ludwigstraße 7, 95028 Hof</p>
                         <p><span class="bold">18.10.2024 15:00 Uhr </span>Kirchpl. 1, 95444 Bayreuth</p>
                     </li>
                 </ul>
