--- a/termine.html
+++ b/termine.html
@@ -195,6 +195,31 @@
                             ticket</a>
                     </li>
                     <li>
+                        <p class="uhr">Sonntag, 19:00 Uhr</p>
+                        <p class="datum">22.09.2024</p>
+                        <p class="concert">"DUO KLAKK! | ALTE X NEUE"</p>
+                        <p class="location">
+                            <i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps?client=safari&sca_esv=597840864&rls=en&sxsrf=ACQVn08PefMNrTffwf2jL2FqHYd2OpDzhg:1705079852321&uact=5&gs_lp=Egxnd3Mtd2l6LXNlcnAiD0tyZXV6a2lyY2hlIGhvZjIIEAAYgAQYywEyBhAAGBYYHjIGEAAYFhgeMgYQABgWGB4yBhAAGBYYHjIGEAAYFhgeMgYQABgWGB4yBhAAGBYYHjIGEAAYFhgeSKUNUNQCWJIMcAJ4AZABAJgBpAGgAf0EqgEDMC41uAEDyAEA-AEBwgIKEAAYRxjWBBiwA8ICCxAuGIAEGMcBGK8BwgIOEC4YgAQYxwEYrwEYjgXCAgUQABiABMICGhAuGIAEGMcBGK8BGJcFGNwEGN4EGOAE2AEB4gMEGAAgQYgGAZAGB7oGBggBEAEYFA&um=1&ie=UTF-8&fb=1&gl=de&sa=X&geocode=KZm9XbWyEaFHMbNLagn9ZM27&daddr=Kurstraße+5,+83435+Bad+Reichenhall" target="_blank">
+                                Kurstraße 5, 83435 Bad Reichenhall
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <a target="_blank" href="https://haraldoeler.com/projekte/duoklakk">DUO KlAkk!</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Warning%20to%20the%20rich&details=Kammerchor%20Hof&location=Kurstraße%205,%2083435%20Bad%20Reichenhall&dates=20240922T170000Z/20240922T190000Z" target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link" href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Warning%20to%20the%20rich%20(at%20Kurstraße%205,%2083435%20Bad%20Reichenhall)%0D%0ADESCRIPTION:Kammerchor%20Hof%0D%0ADTSTART:20240922T170000Z%0D%0ADTEND:20240922T190000Z%0D%0ALOCATION:Kurstraße%205,%2083435%20Bad%20Reichenhall%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR" download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://kammerchor-hof.de/konzerte/">mehr infos | ticket</a>
+                    </li>
+                    
+                    <li>
                         <p class="uhr">Samstag</p>
                         <p class="datum">28.09.2024</p>
                         <p class="concert">"Werner Richter"- Wettbewerb</p>
@@ -245,7 +270,7 @@
                             ticket</a>
                     </li>
                     <li>
-                        <p class="uhr">Freitag, 17:00 Uhr</p>
+                        <p class="uhr">Freitag, 19:00 Uhr</p>
                         <p class="datum">11.10.2024</p>
                         <p class="concert"> Duo KlAkk! | alte x neue</p>
                         <p class="location"><i class="fa-solid fa-location-dot"></i> <a
@@ -256,12 +281,12 @@
                         <div class="calendar-container">
                             <i class="calendar-icon">&#128197;</i>
                             <a class="calendar-link"
-                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Duo%20KlAkk!%20|%20alte%20x%20neue&details=Duo%20KlAkk!%20|%20alte%20x%20neue&location=Ludwigstraße%207,%2095028%20Hof&dates=20241011T150000Z/20241011T170000Z"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Duo%20KlAkk!%20|%20alte%20x%20neue&details=Duo%20KlAkk!%20|%20alte%20x%20neue&location=Ludwigstraße%207,%2095028%20Hof&dates=20241011T150000Z/20241011T190000Z"
                                 target="_blank">
                                 GOOGLE CALENDAR
                             </a> |
                             <a class="calendar-link"
-                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Duo%20KlAkk!%20|%20alte%20x%20neue%0D%0ADESCRIPTION:Duo%20KlAkk!%20|%20alte%20x%20neue%0D%0ADTSTART:20241011T150000Z%0D%0ADTEND:20241011T170000Z%0D%0ALOCATION:Ludwigstraße%207,%2095028%20Hof%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Duo%20KlAkk!%20|%20alte%20x%20neue%0D%0ADESCRIPTION:Duo%20KlAkk!%20|%20alte%20x%20neue%0D%0ADTSTART:20241011T150000Z%0D%0ADTEND:20241011T190000Z%0D%0ALOCATION:Ludwigstraße%207,%2095028%20Hof%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
                                 download="event.ics">
                                 iCAL
                             </a>
@@ -270,7 +295,7 @@
                             | ticket</a>
                     </li>
                     <li>
-                        <p class="uhr">Freitag, 15:00 Uhr</p>
+                        <p class="uhr">Freitag, 19:00 Uhr</p>
                         <p class="datum">18.10.2024</p>
                         <p class="concert"> Duo KlAkk! | alte x neue</p>
                         <p class="location"><i class="fa-solid fa-location-dot"></i> <a
