--- a/termine.html
+++ b/termine.html
@@ -195,12 +195,12 @@
                             ticket</a>
                     </li>
                     <li>
-                        <p class="uhr">Sonntag, 19:00 Uhr</p>
+                        <p class="uhr">Sonntag, 20:00 Uhr</p>
                         <p class="datum">22.09.2024</p>
                         <p class="concert">"DUO KLAKK! | ALTE X NEUE"</p>
                         <p class="location">
                             <i class="fa-solid fa-location-dot"></i> 
-                            <a href="https://www.google.com/maps?client=safari&sca_esv=597840864&rls=en&sxsrf=ACQVn08PefMNrTffwf2jL2FqHYd2OpDzhg:1705079852321&uact=5&gs_lp=Egxnd3Mtd2l6LXNlcnAiD0tyZXV6a2lyY2hlIGhvZjIIEAAYgAQYywEyBhAAGBYYHjIGEAAYFhgeMgYQABgWGB4yBhAAGBYYHjIGEAAYFhgeMgYQABgWGB4yBhAAGBYYHjIGEAAYFhgeSKUNUNQCWJIMcAJ4AZABAJgBpAGgAf0EqgEDMC41uAEDyAEA-AEBwgIKEAAYRxjWBBiwA8ICCxAuGIAEGMcBGK8BwgIOEC4YgAQYxwEYrwEYjgXCAgUQABiABMICGhAuGIAEGMcBGK8BGJcFGNwEGN4EGOAE2AEB4gMEGAAgQYgGAZAGB7oGBggBEAEYFA&um=1&ie=UTF-8&fb=1&gl=de&sa=X&geocode=KZm9XbWyEaFHMbNLagn9ZM27&daddr=Kurstraße+5,+83435+Bad+Reichenhall" target="_blank">
+                            <a href="https://www.google.com/maps/dir/50.316338,11.910899/Kurstraße+5,+83435+Bad+Reichenhall/@47.7898759,12.7612248,11z/data=!4m9!4m8!1m1!4e1!1m5!1m1!1s0x47768c69c24f5349:0xff62a46b8ad1748a!2m2!1d12.88022!2d47.72658?entry=ttu" target="_blank">
                                 Kurstraße 5, 83435 Bad Reichenhall
                             </a>
                         </p>
